Fixed text alignment on button in landscape mode

--- a/src/css/Calculator.css
+++ b/src/css/Calculator.css
@@ -9,12 +9,12 @@
 }
 div.calculator {
   padding-bottom: 50px;
-  padding-top: 50px; 
+  padding-top: 20px; 
   max-width: 70vh;
   margin: 0 auto;
   border: 2px solid white;
   border-radius: 5px;
-   position: relative;
+  /* position: relative; */
 }
 div#display {
   color: #fffffe;
@@ -31,13 +31,14 @@ div.divider {
   border: 1px solid #9893d8 ; 
   width: 10vh;
   height: 10vh;
-  padding: 20px;
+  text-align: center;
   color: #fffffe; 
   border-radius: 100px;
-  font-size: 22px; 
+  font-size: 4vh; 
   cursor: pointer; 
 }
 .calculator-buttons {
+  border: 2px solid red;
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
